Cambios para version Mobile

--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
           required
         ></textarea>
 
-        <fieldset>
+        <!-- <fieldset>
           <legend>¿Como le gustaria que lo contactemos?</legend>
 
           <label for="radio-email"
@@ -89,7 +89,7 @@
               checked
             />Whatsapp</label
           >
-        </fieldset>
+        </fieldset> -->
 
         <!-- <fieldset>
           <legend>¿En cual horario prefiere ser atendido?</legend>
@@ -100,15 +100,15 @@
           </select>
         </fieldset> -->
 
-        <label class="checkbox"
+        <!-- <label class="checkbox"
           ><input type="checkbox" checked />¿Le gustaria recibir novedades de
           Business Woman?</label
-        >
+        > -->
 
         <input type="submit" value="Enviar Formulario" class="enviar" />
       </form>
 
-      <table class="table">
+      <!-- <table class="table">
         <thead>
           <tr>
             <th>Dia</th>
@@ -146,7 +146,7 @@
             <td>08h-20h</td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
     </main>
     <footer>
       <img
