--- a/productos.html
+++ b/productos.html
@@ -218,6 +218,38 @@
           </p>
           <p class="productos-precio">$ 15.00</p> -->
         </li>
+        <li>
+          <!-- <h2>Reposteria por porcion</h2> -->
+          <img src="imagenes/01.png" />
+          <!-- <p class="productos-descripcion">
+            Paquete completo de cabello y barba
+          </p>
+          <p class="productos-precio">$ 15.00</p> -->
+        </li>
+        <li>
+          <!-- <h2>Reposteria por porcion</h2> -->
+          <img src="imagenes/06.png" />
+          <!-- <p class="productos-descripcion">
+            Paquete completo de cabello y barba
+          </p>
+          <p class="productos-precio">$ 15.00</p> -->
+        </li>
+        <li>
+          <!-- <h2>Reposteria por porcion</h2> -->
+          <img src="imagenes/08.png" />
+          <!-- <p class="productos-descripcion">
+            Paquete completo de cabello y barba
+          </p>
+          <p class="productos-precio">$ 15.00</p> -->
+        </li>
+        <li>
+          <!-- <h2>Reposteria por porcion</h2> -->
+          <img src="imagenes/12.png" />
+          <!-- <p class="productos-descripcion">
+            Paquete completo de cabello y barba
+          </p>
+          <p class="productos-precio">$ 15.00</p> -->
+        </li>
       </ul>
     </main>
 
