Cambios en Css y agregado texto en pagina principal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Bussines Woman</title>
+    <link rel="icon" type="image/png" href="./imagenes/Business_Woman.png" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -24,7 +25,7 @@
         <nav>
           <ul class="menu">
             <li><a href="index.html">Home</a></li>
-            <li><a href="productos.html">Catalogo</a></li>
+            <li><a href="productos.html">Catálogo</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
@@ -41,18 +42,29 @@
     </div>
 
     <main>
-      <!-- <section class="principal">
-        <h2 class="titulo-principal">
+      <section class="principal">
+        <!-- <h2 class="titulo-principal">
           Sobre Valeria Sturtz_Miradas con actitud
-        </h2>
-        <img class="utensillos" src="imagenes/logo_mision.jpg" alt="Ojos" />
+        </h2> -->
+        <img class="utensillos" src="./imagenes/23.png" alt="Pijama" />
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
-          voluptatem quia, error ullam cupiditate architecto, dolorum vitae
-          veniam corrupti dolores dolor id velit dignissimos tempora. In
-          repudiandae iure accusantium alias.
+          ¡Bienvenidos a todos! Hoy quiero hablarles sobre los pijamas, una
+          prenda que nos brinda comodidad y descanso después de un largo día. Ya
+          sea que estés buscando pijamas para niños o adultos, la elección
+          adecuada es importante para garantizar una buena noche de sueño. Para
+          los más pequeños, es esencial buscar pijamas suaves y cómodos que les
+          permitan moverse libremente durante la noche. Además, asegúrate de
+          elegir pijamas que se ajusten bien para evitar que se enreden o se
+          sientan incómodos durante la noche. Para los adultos, la elección de
+          un pijama cómodo también es fundamental para un sueño reparador.
+          Además de la comodidad, los pijamas pueden ser una manera de mostrar
+          tu estilo personal. Busca pijamas en colores y diseños que te gusten
+          para hacer que tu ropa de dormir sea una extensión de tu personalidad.
+          Recuerda que los pijamas no solo son para dormir, también pueden ser
+          ideales para pasar un día cómodo en casa. Así que invierte en un
+          pijama de calidad y disfruta de un merecido descanso.
         </p>
-        <p id="mision">
+        <!-- <p id="mision">
           <em
             >Nuestra misión es:
             <strong
@@ -67,11 +79,11 @@
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
           dicta a totam ex rem libero vero adipisci impedit, amet soluta autem
           iste iusto cumque temporibus eum aspernatur. Ex, debitis molestiae?
-        </p>
-      </section> -->
+        </p> -->
+      </section>
 
       <section class="mapa">
-        <h3 class="titulo-principal">Ubicacion</h3>
+        <h3 class="titulo-principal">Ubicación</h3>
         <div class="mapa-contenido">
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3396.679257381831!2d-64.44669088466287!3d-31.642631214398417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942d50a640c767a5%3A0xe05c6c836c8edd41!2sLas%20Rosas%201100%2C%20Alta%20Gracia%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1667885783029!5m2!1ses-419!2sar"
@@ -85,7 +97,7 @@
       </section>
 
       <section class="diferenciales">
-        <!-- <h3 class="titulo-principal">Diferenciales</h3>
+        <h3 class="titulo-principal">Diferenciales</h3>
         <div class="contenido-diferenciales">
           <ul class="lista-diferenciales">
             <li class="items">Atencion personalizada a los clientes</li>
@@ -99,7 +111,7 @@
             src="diferenciales/diferenciales.jpg"
             class="imagen-diferenciales"
           />
-        </div> -->
+        </div>
 
         <div class="video">
           <iframe
