--- a/productos.html
+++ b/productos.html
@@ -3,7 +3,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Catalogo</title>
+    <title>Catálogo</title>
+    <link rel="icon" type="image/png" href="./imagenes/Business_Woman.png" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -16,7 +17,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="productos.html">Catalogo</a></li>
+            <li><a href="productos.html">Catálogo</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
