--- a/contacto.html
+++ b/contacto.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Contacto</title>
+    <link rel="icon" type="image/png" href="./imagenes/Business_Woman.png" />
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -21,7 +22,7 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="productos.html">Catalogo</a></li>
+            <li><a href="productos.html">Catálogo</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </nav>
@@ -32,7 +33,7 @@
         <label for="nombreapellido">Nombre y Apellido</label>
         <input type="text" id="nombreapellido" class="input-padron" required />
 
-        <label for="correoelectronico">Correo Electronico</label>
+        <label for="correoelectronico">Correo Electrónico</label>
         <input
           type="email"
           id="correoelectronico"
@@ -41,7 +42,7 @@
           placeholder="email@dominio.com"
         />
 
-        <label for="telefono">Telefono</label>
+        <label for="telefono">Teléfono</label>
         <input
           type="tel"
           id="telefono"
