Agregados videos y seccion de diferenciales

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           iste iusto cumque temporibus eum aspernatur. Ex, debitis molestiae?
         </p> -->
       </section>
-
+      <!-- 
       <section class="mapa">
         <h3 class="titulo-principal">Ubicación</h3>
         <div class="mapa-contenido">
@@ -94,26 +94,66 @@
             loading="lazy"
           ></iframe>
         </div>
-      </section>
+      </section> -->
 
       <section class="diferenciales">
         <h3 class="titulo-principal">Diferenciales</h3>
         <div class="contenido-diferenciales">
           <ul class="lista-diferenciales">
-            <li class="items">Atencion personalizada a los clientes</li>
-            <li class="items">Espacio diferenciado</li>
-            <li class="items">Localizacion</li>
-            <li class="items">Profesionales calificados</li>
-            <li class="items">Puntualidad</li>
-            <li class="items">Limpieza</li>
+            <li class="items">Exclusividad</li>
+            <li class="items">Personalizacion</li>
+            <li class="items">Calidad</li>
+            <li class="items">Puntualidad en la entrega</li>
           </ul>
-          <img
-            src="diferenciales/diferenciales.jpg"
-            class="imagen-diferenciales"
-          />
         </div>
-
-        <div class="video">
+        <div class="videos-diferenciales">
+          <iframe
+            width="200"
+            height="200"
+            src="./Videos/1.mp4"
+            title="Video player"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="200"
+            height="200"
+            src="./Videos/2.mp4"
+            title="Video player"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="200"
+            height="200"
+            src="./Videos/3.mp4"
+            title="Video player"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="200"
+            height="200"
+            src="./Videos/4.mp4"
+            title="Video player"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+          <iframe
+            width="200"
+            height="200"
+            src="./Videos/5.mp4"
+            title="Video player"
+            frameborder="0"
+            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen
+          ></iframe>
+        </div>
+        <!-- <div class="video">
           <iframe
             width="560"
             height="315"
@@ -123,7 +163,7 @@
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
             allowfullscreen
           ></iframe>
-        </div>
+        </div> -->
       </section>
     </main>
 
