Agregados videos y seccion de diferenciales

--- a/index.html
+++ b/index.html
@@ -107,51 +107,51 @@
           </ul>
         </div>
         <div class="videos-diferenciales">
-          <iframe
-            width="200"
-            height="200"
-            src="./Videos/1.mp4"
-            title="Video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <iframe
-            width="200"
-            height="200"
-            src="./Videos/2.mp4"
-            title="Video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <iframe
-            width="200"
-            height="200"
-            src="./Videos/3.mp4"
-            title="Video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <iframe
-            width="200"
-            height="200"
-            src="./Videos/4.mp4"
-            title="Video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <iframe
-            width="200"
-            height="200"
-            src="./Videos/5.mp4"
-            title="Video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
+          <div class="video-responsive">
+            <iframe
+              width="200"
+              height="200"
+              src="./Videos/1.mp4"
+              title="Video player"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video-responsive">
+            <iframe
+              width="200"
+              height="200"
+              src="./Videos/2.mp4"
+              title="Video player"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video-responsive">
+            <iframe
+              width="200"
+              height="200"
+              src="./Videos/3.mp4"
+              title="Video player"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video-responsive">
+            <iframe
+              width="200"
+              height="200"
+              src="./Videos/4.mp4"
+              title="Video player"
+              allowfullscreen
+            ></iframe>
+          </div>
+          <div class="video-responsive">
+            <iframe
+              width="200"
+              height="200"
+              src="./Videos/5.mp4"
+              title="Video player"
+              allowfullscreen
+            ></iframe>
+          </div>
         </div>
         <!-- <div class="video">
           <iframe
