Agregada seccion de talles y precios

--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
 
     <main>
       <section class="principal">
-        <!-- <h2 class="titulo-principal">
-          Sobre Valeria Sturtz_Miradas con actitud
-        </h2> -->
         <img class="utensillos" src="./imagenes/23.png" alt="Pijama" />
         <p>
           ¡Bienvenidos a todos! Hoy quiero hablarles sobre los pijamas, una
@@ -64,37 +61,47 @@
           ideales para pasar un día cómodo en casa. Así que invierte en un
           pijama de calidad y disfruta de un merecido descanso.
         </p>
-        <!-- <p id="mision">
-          <em
-            >Nuestra misión es:
-            <strong
-              >Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quae
-              ea, nisi dignissimos vero odit totam aliquid blanditiis eveniet
-              delectus explicabo nesciunt esse harum illum dolores assumenda
-              enim amet exercitationem nobis.</strong
-            >.</em
-          >
-        </p>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet
-          dicta a totam ex rem libero vero adipisci impedit, amet soluta autem
-          iste iusto cumque temporibus eum aspernatur. Ex, debitis molestiae?
-        </p> -->
       </section>
-      <!-- 
-      <section class="mapa">
-        <h3 class="titulo-principal">Ubicación</h3>
-        <div class="mapa-contenido">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3396.679257381831!2d-64.44669088466287!3d-31.642631214398417!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x942d50a640c767a5%3A0xe05c6c836c8edd41!2sLas%20Rosas%201100%2C%20Alta%20Gracia%2C%20C%C3%B3rdoba!5e0!3m2!1ses-419!2sar!4v1667885783029!5m2!1ses-419!2sar"
-            width="100%"
-            height="300"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-          ></iframe>
+      <section class="talles_precios">
+        <h3 class="titulo-talles">Talles y Precios</h3>
+        <div class="talles">
+          <img
+            class="foto_talles"
+            src="./imagenes/talles_niños.jpg"
+            alt="Talles Niños"
+          />
+          <img
+            class="foto_talles"
+            src="./imagenes/talles_adultos.jpg"
+            alt="Talles Adultos"
+          />
         </div>
-      </section> -->
+        <div class="tabla_precios">
+          <table class="table">
+            <thead>
+              <tr>
+                <th>Talle&nbsp&nbsp</th>
+                <th>Precio</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>Niños</td>
+                <td>$3300</td>
+              </tr>
+              <tr>
+                <td>S y M</td>
+                <td>$4100</td>
+              </tr>
+              <tr>
+                <td>L y XL</td>
+                <td>$5000</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+      </section>
 
       <section class="diferenciales">
         <h3 class="titulo-principal">Diferenciales</h3>
@@ -109,7 +116,7 @@
         <div class="videos-diferenciales">
           <div class="video-responsive">
             <iframe
-              width="250"
+              width="225"
               height="250"
               src="https://www.youtube.com/embed/82Ydx0W3A6Y"
               title="YouTube video player"
@@ -120,7 +127,7 @@
           </div>
           <div class="video-responsive">
             <iframe
-              width="250"
+              width="225"
               height="250"
               src="https://www.youtube.com/embed/iAvX2ciVgrc"
               title="2"
@@ -131,7 +138,7 @@
           </div>
           <div class="video-responsive">
             <iframe
-              width="250"
+              width="225"
               height="250"
               src="https://www.youtube.com/embed/7x05dLYPhA8"
               title="3"
@@ -142,7 +149,7 @@
           </div>
           <div class="video-responsive">
             <iframe
-              width="250"
+              width="225"
               height="250"
               src="https://www.youtube.com/embed/ikNh9pV4Mes"
               title="4"
@@ -153,7 +160,7 @@
           </div>
           <div class="video-responsive">
             <iframe
-              width="250"
+              width="225"
               height="250"
               src="https://www.youtube.com/embed/7x05dLYPhA8"
               title="3"
@@ -163,17 +170,6 @@
             ></iframe>
           </div>
         </div>
-        <!-- <div class="video">
-          <iframe
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/sVlEkm6tm2s"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-        </div> -->
       </section>
     </main>
 
