Cambio de nombre Puntualidad

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             <li class="items">Exclusividad</li>
             <li class="items">Personalizacion</li>
             <li class="items">Calidad</li>
-            <li class="items">Puntualidad en la entrega</li>
+            <li class="items">Puntualidad</li>
           </ul>
         </div>
         <div class="videos-diferenciales">
