Cambio de estilos en formulario de contacto

--- a/contacto.html
+++ b/contacto.html
@@ -52,13 +52,7 @@
         />
 
         <label for="mensaje">Mensaje</label>
-        <textarea
-          cols="70"
-          rows="10"
-          id="mensaje"
-          class="input-padron"
-          required
-        ></textarea>
+        <input type="text" id="mensaje" class="input-textarea" required></input>
 
         <input type="submit" value="Enviar Formulario" class="enviar" />
       </form>
