Cambio de estilos para formulario de contacto y agregado whatsapp

--- a/contacto.html
+++ b/contacto.html
@@ -53,8 +53,11 @@
 
         <label for="mensaje">Mensaje</label>
         <input type="text" id="mensaje" class="input-textarea" required></input>
-
         <input type="submit" value="Enviar Formulario" class="enviar" />
+        <div class="whatsapp">
+          <img class="icono-whatsapp" width="150" height="150" src="./imagenes/Whatsapp.png" alt="Icono de whatsapp" />
+          <p class="telefono-whatsapp">351 852-4287</p>
+        </div>
       </form>
     </main>
     <footer>
