--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <div class="contenido-diferenciales">
           <ul class="lista-diferenciales">
             <li class="items">Exclusividad</li>
-            <li class="items">Personalizacion</li>
+            <li class="items">Personalización</li>
             <li class="items">Calidad</li>
             <li class="items">Puntualidad</li>
           </ul>
