Agregado catalogo de Pantuflas

--- a/index.html
+++ b/index.html
@@ -35,8 +35,10 @@
     <div class="slider-frame">
       <ul>
         <li><img class="imagen" src="imagenes/banner_4.png" /></li>
+        <li>
+          <img class="imagen" src="imagenes/Pantuflas/banner_pantuflas.png" />
+        </li>
         <li><img class="imagen" src="imagenes/banner_2.png" /></li>
-        <li><img class="imagen" src="imagenes/banner_1.png" /></li>
         <li><img class="imagen" src="imagenes/banner_3.png" /></li>
       </ul>
     </div>
@@ -48,18 +50,29 @@
           ¡Bienvenidos a todos! Hoy quiero hablarles sobre los pijamas, una
           prenda que nos brinda comodidad y descanso después de un largo día. Ya
           sea que estés buscando pijamas para niños o adultos, la elección
-          adecuada es importante para garantizar una buena noche de sueño. Para
-          los más pequeños, es esencial buscar pijamas suaves y cómodos que les
-          permitan moverse libremente durante la noche. Además, asegúrate de
-          elegir pijamas que se ajusten bien para evitar que se enreden o se
-          sientan incómodos durante la noche. Para los adultos, la elección de
-          un pijama cómodo también es fundamental para un sueño reparador.
+          adecuada es importante para garantizar una buena noche de sueño.
           Además de la comodidad, los pijamas pueden ser una manera de mostrar
           tu estilo personal. Busca pijamas en colores y diseños que te gusten
           para hacer que tu ropa de dormir sea una extensión de tu personalidad.
           Recuerda que los pijamas no solo son para dormir, también pueden ser
           ideales para pasar un día cómodo en casa. Así que invierte en un
           pijama de calidad y disfruta de un merecido descanso.
+        </p>
+      </section>
+      <section class="principal">
+        <img
+          class="utensillos"
+          src="./imagenes/Pantuflas/14.jpg"
+          alt="Pantufla"
+        />
+        <p>
+          Las pantuflas, una prenda de calzado esencial para nuestro confort en
+          casa. Las pantuflas pueden mantener nuestros pies calientes y cómodos
+          en los días fríos, y proteger nuestros pies de posibles lesiones en el
+          hogar. Además, son fáciles de poner y quitar, lo que las hace
+          convenientes para usar en casa. Así que no lo pienses dos veces,
+          invierte en un par de pantuflas de calidad y disfruta de la comodidad
+          en casa.
         </p>
       </section>
       <section class="talles_precios">
@@ -76,30 +89,53 @@
             alt="Talles Adultos"
           />
         </div>
-        <div class="tabla_precios">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>Talle&nbsp&nbsp</th>
-                <th>Precio</th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <tr>
-                <td>Niños</td>
-                <td>$3300</td>
-              </tr>
-              <tr>
-                <td>S y M</td>
-                <td>$4100</td>
-              </tr>
-              <tr>
-                <td>L y XL</td>
-                <td>$5000</td>
-              </tr>
-            </tbody>
-          </table>
+        <div class="tablas">
+          <div class="tabla_precios">
+            <h4>Pijamas</h4>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Talle&nbsp&nbsp</th>
+                  <th>Precio</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Niños</td>
+                  <td>$3300</td>
+                </tr>
+                <tr>
+                  <td>S y M</td>
+                  <td>$4100</td>
+                </tr>
+                <tr>
+                  <td>L y XL</td>
+                  <td>$5000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="tabla_precios">
+            <h4>Pantuflas</h4>
+            <table class="table">
+              <thead>
+                <tr>
+                  <th>Talle&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                  <th>Precio</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>36 al 38</td>
+                  <td>$5000</td>
+                </tr>
+                <tr>
+                  <td>39 al 40</td>
+                  <td>$5000</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </div>
       </section>
 
