--- a/productos.html
+++ b/productos.html
@@ -24,93 +24,181 @@
       </div>
     </header>
 
-    <main>
-      <ul class="productos">
-        <li>
-          <img src="imagenes/13.png" />
-        </li>
-        <li>
-          <img src="imagenes/14.png" />
-        </li>
-        <li>
-          <img src="imagenes/15.png" />
-        </li>
-        <li>
-          <img src="imagenes/16.png" />
-        </li>
-        <li>
-          <img src="imagenes/17.png" />
-        </li>
-        <li>
-          <img src="imagenes/18.png" />
-        </li>
-        <li>
-          <img src="imagenes/19.png" />
-        </li>
-        <li>
-          <img src="imagenes/20.png" />
-        </li>
-        <li>
-          <img src="imagenes/21.png" />
-        </li>
-        <li>
-          <img src="imagenes/22.png" />
-        </li>
-        <li>
-          <img src="imagenes/23.png" />
-        </li>
-        <li>
-          <img src="imagenes/24.png" />
-        </li>
-        <li>
-          <img src="imagenes/25.png" />
-        </li>
-        <li>
-          <img src="imagenes/26.png" />
-        </li>
-        <li>
-          <img src="imagenes/27.png" />
-        </li>
-        <li>
-          <img src="imagenes/28.png" />
-        </li>
-        <li>
-          <img src="imagenes/29.png" />
-        </li>
-        <li>
-          <img src="imagenes/30.png" />
-        </li>
-        <li>
-          <img src="imagenes/31.png" />
-        </li>
-        <li>
-          <img src="imagenes/32.png" />
-        </li>
-        <li>
-          <img src="imagenes/33.png" />
-        </li>
-        <li>
-          <img src="imagenes/34.png" />
-        </li>
-        <li>
-          <img src="imagenes/35.png" />
-        </li>
-        <li>
-          <img src="imagenes/36.png" />
-        </li>
-        <li>
-          <img src="imagenes/01.png" />
-        </li>
-        <li>
-          <img src="imagenes/06.png" />
-        </li>
-        <li>
-          <img src="imagenes/08.png" />
-        </li>
-        <li>
-          <img src="imagenes/12.png" />
-        </li>
-      </ul>
+    <main class="contenedor-productos">
+      <div>
+        <h3 class="titulo-productos">Pijamas</h3>
+        <ul class="productos">
+          <li>
+            <img src="imagenes/13.png" />
+          </li>
+          <li>
+            <img src="imagenes/14.png" />
+          </li>
+          <li>
+            <img src="imagenes/15.png" />
+          </li>
+          <li>
+            <img src="imagenes/16.png" />
+          </li>
+          <li>
+            <img src="imagenes/17.png" />
+          </li>
+          <li>
+            <img src="imagenes/18.png" />
+          </li>
+          <li>
+            <img src="imagenes/19.png" />
+          </li>
+          <li>
+            <img src="imagenes/20.png" />
+          </li>
+          <li>
+            <img src="imagenes/21.png" />
+          </li>
+          <li>
+            <img src="imagenes/22.png" />
+          </li>
+          <li>
+            <img src="imagenes/23.png" />
+          </li>
+          <li>
+            <img src="imagenes/24.png" />
+          </li>
+          <li>
+            <img src="imagenes/25.png" />
+          </li>
+          <li>
+            <img src="imagenes/26.png" />
+          </li>
+          <li>
+            <img src="imagenes/27.png" />
+          </li>
+          <li>
+            <img src="imagenes/28.png" />
+          </li>
+          <li>
+            <img src="imagenes/29.png" />
+          </li>
+          <li>
+            <img src="imagenes/30.png" />
+          </li>
+          <li>
+            <img src="imagenes/31.png" />
+          </li>
+          <li>
+            <img src="imagenes/32.png" />
+          </li>
+          <li>
+            <img src="imagenes/33.png" />
+          </li>
+          <li>
+            <img src="imagenes/34.png" />
+          </li>
+          <li>
+            <img src="imagenes/35.png" />
+          </li>
+          <li>
+            <img src="imagenes/36.png" />
+          </li>
+          <li>
+            <img src="imagenes/01.png" />
+          </li>
+          <li>
+            <img src="imagenes/06.png" />
+          </li>
+          <li>
+            <img src="imagenes/08.png" />
+          </li>
+          <li>
+            <img src="imagenes/12.png" />
+          </li>
+          <li>
+            <img src="imagenes/02.png" />
+          </li>
+          <li>
+            <img src="imagenes/03.png" />
+          </li>
+          <li>
+            <img src="imagenes/37.png" />
+          </li>
+          <li>
+            <img src="imagenes/38.png" />
+          </li>
+          <li>
+            <img src="imagenes/39.png" />
+          </li>
+        </ul>
+      </div>
+      <div>
+        <h3 class="titulo-productos">Pantuflas</h3>
+        <ul class="productos">
+          <li>
+            <img src="imagenes/Pantuflas/1.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/2.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/3.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/4.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/5.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/6.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/7.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/8.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/9.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/10.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/11.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/12.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/13.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/14.jpg" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/16.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/17.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/18.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/19.png" />
+          </li>
+          <li>
+            <img src="imagenes/Pantuflas/20.png" />
+          </li>
+        </ul>
+        <h3 class="titulo-productos">Recomendaciones</h3>
+        <div class="recomendaciones">
+          <img
+            class="imagen-recomendaciones"
+            src="./imagenes/Pantuflas/15.png"
+            alt="Imagenes con recomendaciones"
+          />
+        </div>
+      </div>
     </main>
 
     <footer>
