Cambio talles Pantuflas

--- a/index.html
+++ b/index.html
@@ -120,18 +120,22 @@
             <table class="table">
               <thead>
                 <tr>
-                  <th>Talle&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</th>
+                  <th>Talle&nbsp&nbsp&nbsp&nbsp</th>
                   <th>Precio</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>36 al 38</td>
+                  <td>35/36/37</td>
                   <td>$5000</td>
                 </tr>
                 <tr>
-                  <td>39 al 40</td>
+                  <td>38/39/40</td>
                   <td>$5000</td>
+                </tr>
+                <tr>
+                  <td>Ancho</td>
+                  <td>14/16cm</td>
                 </tr>
               </tbody>
             </table>
